updated about page

--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -126,38 +126,38 @@ body {
 main {
   flex-wrap: wrap;
 }
-main section {
+main .box {
   display: flex;
   flex-direction: column;
 }
-main section .heading {
+main .box .heading {
   display: flex;
   justify-content: center;
   padding: 30px 0px 20px 0px;
   text-align: center;
   margin: 0;
 }
-main section .about {
+main .box .about {
   display: flex;
   justify-content: space-around;
   text-align: left;
   padding: 50px;
 }
 @media screen and (max-width: 1080px) {
-  main section .about {
+  main .box .about {
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding: 0px 30px 80px 30px;
   }
 }
-main section .about article {
+main .box .about article {
   max-width: 800px;
   text-align: justify;
   padding: 0px 40px 0px 0px;
 }
 @media screen and (max-width: 1080px) {
-  main section .about article {
+  main .box .about article {
     flex-direction: column;
     align-items: center;
     text-align: justify;
@@ -165,26 +165,26 @@ main section .about article {
          text-align-last: center;
     padding: 0px;
   }
-  main section .about article h2 {
+  main .box .about article h2 {
     text-align: center;
   }
 }
-main section .about aside img {
+main .box .about aside img {
   max-width: 400px;
   width: 90vw;
   border: 5px solid rgb(246, 248, 249);
   border-radius: 50px;
   overflow: hidden;
 }
-main section .about aside .image-grid-4 {
+main .box .about aside .image-grid-4 {
   max-width: 400px;
   width: 90vw;
 }
-main section .about aside .image-grid-4 img {
+main .box .about aside .image-grid-4 img {
   border: 5px solid rgb(246, 248, 249);
   border-radius: 50px;
   overflow: hidden;
 }
-main section .about aside .image-grid-row {
+main .box .about aside .image-grid-row {
   display: flex;
 }/*# sourceMappingURL=about.css.map */
